Revert to Java 11 for legacy migration demo
- Change java.version from 17 to 11
- Convert record to class (InsuranceGateway.ClaimStatus)
- Convert switch expressions to traditional switch statements

🤖 Generated with [Chisel](https://cognition.ai/devin-cli)

Co-Authored-By: Chisel <noreply@cognition.ai>